fixed spacing on heading in description

--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -75,3 +75,43 @@
     }
     
 }
+
+@media (max-width: 670px) {
+    .description-container {
+        background-image: none; /* The image used */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .description-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    
+    .text2 {
+        color: black !important;
+    }
+
+    .description-content h1 {
+        position: relative;
+        bottom: 5%;
+        font-size: 100%;
+        color: #3140a2;
+        font-weight: bolder;
+    }
+    
+    .description-content p {
+        font-size: 90%;
+        color: #3140a2;
+        font-weight: bolder;
+    }
+    
+}
